@@ -1,23 +1,21 @@
 # header information:
-Hspiceparts|8.01ax|USER_electrical_units()I70464
+Hspiceparts|8.02i|USER_electrical_units()I70464
 
 # Views:
 Vicon|ic
 
-# Technology artwork
+# Tools:
+Ouser|DefaultTechnology()Stsmc90|SchematicTechnology()Stsmc90
+
+# Technologies:
 Tartwork
-DArrow
-DBox
-DCircle
-DOpened-Dotted-Polygon
-DOpened-Polygon
-
-# Technology generic
+Tcmos|ScaleFORcmos()D1000.0
 Tgeneric
-DInvisible-Pin
-Pcenter
+Tmocmos|CapacitanceParasiticForMetal-1INmocmos()D0.1209|CapacitanceParasiticForMetal-2INmocmos()D0.0783|EdgeCapacitanceParasiticForMetal-1INmocmos()D0.1104|GDSLayerForMetal-1INmocmos()S49,80p,80t|GDSLayerForMetal-2INmocmos()S51,82p,82t|GDSLayerForMetal-3INmocmos()S62,93p,93t|GDSLayerForMetal-4INmocmos()S31,63p,63t|GDSLayerForMetal-5INmocmos()S33,64p,64t|GDSLayerForMetal-6INmocmos()S37,68p,68t|MoCMOSNumberOfMetalLayers()I6|ScaleFORmocmos()D100.0
+Trcmos|ScaleFORrcmos()D1000.0
+Ttsmc90|CapacitanceParasiticForMetal-1INtsmc90()D0.274|CapacitanceParasiticForMetal-2INtsmc90()D0.2157|CapacitanceParasiticForPolysiliconINtsmc90()D0.096|EdgeCapacitanceParasiticForMetal-1INtsmc90()D0.1043|EdgeCapacitanceParasiticForMetal-2INtsmc90()D0.102|EdgeCapacitanceParasiticForPolysiliconINtsmc90()D0.0731|ResistanceParasiticForPolysiliconINtsmc90()D8.4
 
-# Cell ACCurrent{ic}
+# Cell spiceparts:ACCurrent{ic}
 CACCurrent;1{ic}|artwork|1006816118000|1103661154031|E|ATTR_ACCurrent(D5G0.5;HNPY0.75;)S1A|ATTR_DCCurrent(D5G0.5;HNPY0.25;)S1A|ATTR_Delay(D5G0.5;HNPY-0.75;)S1ns|ATTR_Frequency(D5G0.5;HNPY-0.25;)S800M|ATTR_SPICE_template(D5G0.5;NTY5;)SI$(node_name) $(plus) $(minus) DC=$(DCCurrent) AC=$(ACCurrent) SIN ($(DCCurrent) $(ACCurrent) $(Frequency) $(Delay))
 NCircle|art@0||0|0|6|6|||ART_color()I10
 NOpened-Polygon|art@1||0|0|0|5|||ART_color()I10|trace()V[0/2.5,0/-2.5]
@@ -28,7 +26,7 @@ Eminus|D5G1;|pin@0||U
 Eplus|D5G1;|pin@1||U
 X
 
-# Cell ACVoltage{ic}
+# Cell spiceparts:ACVoltage{ic}
 CACVoltage;1{ic}|artwork|1006816118000|1103661176453|E|ATTR_ACVoltage(D5G0.5;HNPY1;)S1V|ATTR_DCVoltage(D5G0.5;HNPY1.5;)S1V|ATTR_Delay(D5G0.5;HNPY-1.5;)S1ns|ATTR_Frequency(D5G0.5;HNPY-1;)S800M|ATTR_SPICE_template(D5G0.5;NTY5;)SV$(node_name) $(plus) $(minus) DC=$(DCVoltage) AC=$(ACVoltage) SIN ($(DCVoltage) $(ACVoltage) $(Frequency) $(Delay))
 NCircle|art@0||0|0|6|6|||ART_color()I10
 Ngeneric:Invisible-Pin|pin@0||0|3|0|0||
@@ -38,28 +36,28 @@ Eminus|D5G1;|pin@1||U
 Eplus|D5G1;|pin@0||U
 X
 
-# Cell AnalysisAC{ic}
+# Cell spiceparts:AnalysisAC{ic}
 CAnalysisAC;1{ic}|artwork|1006816118000|1103661193484|E|ATTR_Parameters(D5G0.5;HNPY-1.5;)Snull|ATTR_SPICE_template(D5G0.5;NTY5;)S.AC $(Parameters)
 NOpened-Polygon|art@0||0|0|6|2|||ART_color()I10|trace()V[-3/0,-2/0,-2/1,-1/1,-1/-1,0/-1,0/1,1/1,1/-1,2/-1,2/0,3/0]
 NCircle|art@1||0|0|6|6|||ART_color()I10
 Ngeneric:Invisible-Pin|pin@0||0|1.75|0|0|||ART_message(D5G1;)S[AC]
 X
 
-# Cell AnalysisDC{ic}
+# Cell spiceparts:AnalysisDC{ic}
 CAnalysisDC;1{ic}|artwork|1006816118000|1103661205375|E|ATTR_Parameters(D5G0.5;HNPY-1.5;)Snull|ATTR_SPICE_template(D5G0.5;NTY5;)S.DC $(Parameters)
 NCircle|art@0||0|0|6|6|||ART_color()I10
 NOpened-Polygon|art@1||0|0|6|2|||ART_color()I10|trace()V[-3/0,-2/0,-2/1,-1/1,-1/-1,0/-1,0/1,1/1,1/-1,2/-1,2/0,3/0]
 Ngeneric:Invisible-Pin|pin@0||0|1.75|0|0|||ART_message(D5G1;)S[DC]
 X
 
-# Cell AnalysisTransient{ic}
+# Cell spiceparts:AnalysisTransient{ic}
 CAnalysisTransient;1{ic}|artwork|1006816118000|1103661226859|E|ATTR_Parameters(D5G0.5;HNPX7;Y-1.5;)Snull|ATTR_SPICE_template(D5G0.5;NTX7;Y5;)S.TRAN $(Parameters)
 NCircle|art@0||7|0|6|6|||ART_color()I10
 NOpened-Polygon|art@1||7|0|6|2|||ART_color()I10|trace()V[-3/0,-2/0,-2/1,-1/1,-1/-1,0/-1,0/1,1/1,1/-1,2/-1,2/0,3/0]
 Ngeneric:Invisible-Pin|pin@0||7|1.75|0|0|||ART_message(D5G1;)S[Transient]
 X
 
-# Cell CCCS{ic}
+# Cell spiceparts:CCCS{ic}
 CCCCS;1{ic}|artwork|1006816118000|1103661254812|E|ATTR_Gain(D5G0.5;HNPY1;)I1|ATTR_Maximum(D5G0.5;HNPY-1;)S10A|ATTR_Minimum(D5G0.5;HNP)S-10A|ATTR_SPICE_template(D5G0.5;NTY4;)SF$(node_name) $(x) $(y) cccs VSAMPLE $(Gain) max=$(Maximum) min=$(Minimum)
 NBox|art@0||0|0|8|6|||ART_color()I10
 NOpened-Polygon|art@1||3.62|0|2.75|4|||ART_color()I10|trace()V[1.375/2,-0.625/2,-0.625/0.75,-1.375/0,-0.625/-0.75,-0.625/-2,1.375/-2]
@@ -80,7 +78,7 @@ Ex|D5G1;|pin@1||U
 Ey|D5G1;|pin@0||U
 X
 
-# Cell CCVS{ic}
+# Cell spiceparts:CCVS{ic}
 CCCVS;1{ic}|artwork|1006816118000|1103661280437|E|ATTR_Maximum(D5G0.5;HNPY-1;)S10A|ATTR_Minimum(D5G0.5;HNP)S-10A|ATTR_Resistance(D5G0.5;HNPY1;)I1000|ATTR_SPICE_template(D5G0.5;NTY4;)SH$(node_name) $(x) $(y) ccvs VSAMPLE $(Resistance) max=$(Maximum) min=$(Minimum)
 NOpened-Dotted-Polygon|art@0||-3|0|0|4|||ART_color()I10|trace()V[0/2,0/-2]
 NOpened-Polygon|art@1||-4|-2|2|0|||ART_color()I10|trace()V[-1/0,1/0]
@@ -101,7 +99,7 @@ Ex|D5G1;|pin@3||U
 Ey|D5G1;|pin@4||U
 X
 
-# Cell DCCurrent{ic}
+# Cell spiceparts:DCCurrent{ic}
 CDCCurrent;1{ic}|artwork|1006816118000|1103661295140|E|ATTR_DCCurrent(D5G0.5;HNP)S1mA|ATTR_SPICE_template(D5G0.5;NTY5;)SI$(node_name) $(plus) $(minus) DC $(DCCurrent)
 NOpened-Polygon|art@0||0|0|0|4|||ART_color()I10|trace()V[0/-2,0/2]
 NCircle|art@1||0|0|6|6|||ART_color()I10
@@ -112,7 +110,7 @@ Eminus|D5G1;|pin@1||U
 Eplus|D5G1;|pin@0||U
 X
 
-# Cell DCVoltage{ic}
+# Cell spiceparts:DCVoltage{ic}
 CDCVoltage;1{ic}|artwork|1006816118000|1103661312343|E|ATTR_SPICE_template(D5G0.5;NTY5.5;)SV$(node_name) $(plus) $(minus) DC $(Voltage)|ATTR_Voltage(D5G0.5;HNP)S0V
 NOpened-Polygon|art@0||0|0.5|2|0|||ART_color()I10|trace()V[-1/0,1/0]
 NOpened-Polygon|art@1||0|1.5|4|0|||ART_color()I10|trace()V[-2/0,2/0]
@@ -128,7 +126,7 @@ Eminus|D5G1;|pin@0||U
 Eplus|D5G1;|pin@1||U
 X
 
-# Cell Extension{ic}
+# Cell spiceparts:Extension{ic}
 CExtension;1{ic}|artwork|1006816118000|1103661326437|E|ATTR_SPICE_template(D5G0.5;NTY5;)SX $(plus) $(minus)
 NCircle|art@0||0|0|6|6|||ART_color()I10
 Ngeneric:Invisible-Pin|pin@0||0|-3|0|0||
@@ -138,7 +136,7 @@ Eminus|D5G1;|pin@0||U
 Eplus|D5G1;|pin@1||U
 X
 
-# Cell NodeSet{ic}
+# Cell spiceparts:NodeSet{ic}
 CNodeSet;1{ic}|artwork|1006816118000|1103661336093|E|ATTR_Parameter(D5G0.5;HNPY-1;)Snull|ATTR_SPICE_template(D5G0.5;NTY5;)S.NODESET V($(plus))=$(Parameter)
 NCircle|art@0||0|0|6|6|||ART_color()I10
 Ngeneric:Invisible-Pin|pin@0||0|3|0|0||
@@ -146,7 +144,7 @@ Ngeneric:Invisible-Pin|pin@1||0|1|0|0|||ART_message(D5G1;)S[Node Set]
 Eplus|D5G1;|pin@0||U
 X
 
-# Cell Pulse{ic}
+# Cell spiceparts:Pulse{ic}
 CPulse;1{ic}|artwork|1006816118000|1006988357000|E|ATTR_DelayTime(D5G0.5;HNPX7;Y0.5;)S0ns|ATTR_FallTime(D5G0.5;HNPX7;Y-0.5;)S200ps|ATTR_InitialVoltage(D5G0.5;HNPX7;Y1.5;)I0|ATTR_Period(D5G0.5;HNPX7;Y-1.5;)S6ns|ATTR_PulseVoltage(D5G0.5;HNPX7;Y1;)S3V|ATTR_PulseWidth(D5G0.5;HNPX7;Y-1;)S3ns|ATTR_RiseTime(D5G0.5;HNPX7;)S200ps|ATTR_SPICE_template(D5G0.5;NTX7;Y5;)SV$(node_name) $(plus) $(minus) pulse $(InitialVoltage) $(PulseVoltage) $(DelayTime) $(RiseTime) $(FallTime) $(PulseWidth) $(Period)
 NOpened-Polygon|art@0||7|0|3|4|||ART_color()I10|trace()V[-1.5/-2,-0.5/-2,-0.5/2,0.5/2,0.5/-2,1.5/-2]
 NCircle|art@1||7|0|6|6|||ART_color()I10
@@ -156,7 +154,7 @@ Eminus|D5G1;|pin@1||U
 Eplus|D5G1;|pin@0||U
 X
 
-# Cell PulseCurrent{ic}
+# Cell spiceparts:PulseCurrent{ic}
 CPulseCurrent;1{ic}|artwork|1006816118000|1103661347265|E|ATTR_DelayTime(D5G0.5;HNPY0.5;)S0ns|ATTR_FallTime(D5G0.5;HNPY-0.5;)S200ps|ATTR_InitialCurrent(D5G0.5;HNPY1.5;)I0|ATTR_Period(D5G0.5;HNPY-1.5;)S6ns|ATTR_PulseCurrent(D5G0.5;HNPY1;)S1mA|ATTR_PulseWidth(D5G0.5;HNPY-1;)S3ns|ATTR_RiseTime(D5G0.5;HNP)S200ps|ATTR_SPICE_template(D5G0.5;NTY5;)SI$(node_name) $(plus) $(minus) pulse $(InitialCurrent) $(PulseCurrent) $(DelayTime) $(RiseTime) $(FallTime) $(PulseWidth) $(Period)
 NArrow|art@0||0|2|1|1|R||ART_color()I10
 NCircle|art@1||0|0|6|6|||ART_color()I10
@@ -168,7 +166,7 @@ Eminus|D5G1;|pin@0||U
 Eplus|D5G1;|pin@1||U
 X
 
-# Cell Transmission{ic}
+# Cell spiceparts:Transmission{ic}
 CTransmission;1{ic}|artwork|1006816118000|1103661364546|E|ATTR_Delay(D5G0.5;HNPY-1;)S100ns|ATTR_SPICE_template(D5G0.5;NTX-1;Y4;)ST$(node_name) $(a) $(b) $(x) $(y) z0=$(z0) td=$(Delay)|ATTR_z0(D5G0.5;HNPY1;)I50
 NOpened-Polygon|art@0||0|-3|8|0|||ART_color()I10|trace()V[-4/0,4/0]
 NOpened-Polygon|art@1||0|3|8|0|||ART_color()I10|trace()V[-4/0,4/0]
@@ -191,7 +189,7 @@ Ex|D5G1;|pin@4||U
 Ey|D5G1;|pin@5||U
 X
 
-# Cell VCCS{ic}
+# Cell spiceparts:VCCS{ic}
 CVCCS;1{ic}|artwork|1006816118000|1103661118312|E|ATTR_Gain(D5G0.5;HNPY1.5;)F0.0010|ATTR_Maximum(D5G0.5;HNPY-0.5;)S1A|ATTR_Minimum(D5G0.5;HNPY0.5;)S-1A|ATTR_SPICE_template(D5G0.5;NTY4.5;)SG$(node_name) $(x) $(y) vccs $(a) $(b) $(Gain) max=$(Maximum) min=$(Minimum)
 NArrow|art@0||2|-1|1|1|RRR||ART_color()I10
 NOpened-Polygon|art@1||2|0.5|0|4|||ART_color()I10|trace()V[0/2,0/-2]
@@ -211,7 +209,7 @@ Ex|D5G1;|pin@3||U
 Ey|D5G1;|pin@4||U
 X
 
-# Cell VCVS{ic}
+# Cell spiceparts:VCVS{ic}
 CVCVS;1{ic}|artwork|1006816118000|1103661387937|E|ATTR_Gain(D5G0.5;HNPY1;)I1|ATTR_Maximum(D5G0.5;HNPY-1;)S10V|ATTR_Minimum(D5G0.5;HNP)S-10V|ATTR_SPICE_template(D5G0.5;NTY4;)SE$(node_name) $(x) $(y) vcvs $(a) $(b) $(Gain) max=$(Maximum) min=$(Minimum)
 NCircle|art@0||3|0|1.5|1.5|||ART_color()I10
 NOpened-Polygon|art@1||4|-1.38|2|1.25|||ART_color()I10|trace()V[1/-0.625,-1/-0.625,-1/0.625]
@@ -243,8 +241,8 @@ G|DCCurrent;1{ic}
 G|DCVoltage;1{ic}
 G|Extension;1{ic}
 G|NodeSet;1{ic}
-G|PulseCurrent;1{ic}
 G|Pulse;1{ic}
+G|PulseCurrent;1{ic}
 G|Transmission;1{ic}
 G|VCCS;1{ic}
 G|VCVS;1{ic}
